--- a/parallax/css/style.css
+++ b/parallax/css/style.css
@@ -48,21 +48,19 @@ h1 {
 		position: absolute;
 		top: 0;
 		left: 0;
-
-		background-size: cover;
 }
 
 
 .block1 {
-	background: url("../img/img_homepage_slider1.jpg") no-repeat center;
+	background: url("../img/img_homepage_slider1.jpg") no-repeat center/cover;
 }
 
 .block2 {
-	background: url("../img/img_homepage_divider.jpg") no-repeat center;
+	background: url("../img/img_homepage_divider.jpg") no-repeat center/cover;
 }
 
 .block3 {
-	background: url("../img/img_homepage_footer.jpg") no-repeat center;
+	background: url("../img/img_homepage_footer.jpg") no-repeat center/cover;
 }
 
 #shop, #about, #contact {
